--- a/PM-FE/chat.html
+++ b/PM-FE/chat.html
@@ -19,12 +19,8 @@
 <body>
 
     <header id="header">
-        <a href="#"><img class="logo" src="./resources/images/Logo_official.png" alt="" /></a>
         <div id="left-header">
-            <div id="search-div">
-                <img src="./resources/images/search.svg">
-                <input type="text">
-            </div>
+            <a href="#"><img class="logo" src="./resources/images/Logo_official.png" alt="" /></a>
         </div>
         <div id="right-header">
             <nav id="nav-menu">
@@ -33,6 +29,12 @@
                         home
                     </div>
                     <h6>Home</h6>
+                </div>
+                <div class="menu-icons">
+                    <div class="material-icons md-24">
+                        search
+                    </div>
+                    <h6>Search</h6>
                 </div>
                 <div class="menu-icons">
                     <div class="material-icons md-24">
@@ -62,26 +64,12 @@
                     <div class="material-icons md-24 ">
                         &#xe853
                     </div>
-
-                    <div id="personal-dropdown">
-                        <div id="small-avatar">
-                            <img src="./resources/images/user.svg" style="height: 40px;width: 40px;">
-                        </div>
-
-                        <div id="short-info">
-                            <h5>Name</h5>
-                            <h5>Jobs</h5>
-                        </div>
-
-                        <div id="view-profile-btn">
-                            <a href="#">View profile</a>
-                        </div>
-                    </div>
                     <h6>Me</h6>
                 </div>
             </nav>
         </div>
     </header>
+    
     <div class="wrapper">
         <div class="left-col">
             <div class="searchUser">
