--- a/PM-FE/chat.html
+++ b/PM-FE/chat.html
@@ -25,7 +25,7 @@
         <div class="modal" id="modal">
             <div class="modal-header">
                 <button data-close-button class="close-button"><i class="fas fa-long-arrow-alt-left"></i></button>
-                <input class="search-input"type="text" placeholder="Search" autofocus>
+                <input class="search-input" type="text" placeholder="Search">
                 <i class="fas fa-search"></i>
             </div>
         </div>
@@ -36,7 +36,7 @@
                     <div class="material-icons md-24">
                         search
                     </div>
-                    <h6>Search</h6>
+                    <h6>Search <i class="fas fa-caret-down"></i></h6>
                 </div>
 
                 <div class="menu-icons">
@@ -69,11 +69,30 @@
                     </div>
                     <h6>Notifications</h6>
                 </div>
-                <div class="menu-icons" id="personal-icon">
-                    <div class="material-icons md-24 ">
-                        &#xe853
+
+                <div class=" menu-icons dropbtn" id="personal-icon">
+                    <div class="profile">
+                        <img src="./resources//images//avatar.png" alt="">
                     </div>
-                    <h6>Me</h6>
+                    <div>
+                        <h6>Me <i class="fas fa-caret-down"></i></h6>
+                    </div>
+                </div>
+                
+                <!-- user account dropdown menu -->
+                <div class="dropdown-menu">
+                    <div class="profile">
+                        <img src="./resources//images//avatar.png" alt="">
+                        <h3>Hieu Vu Minh <br> <span>Student at Hanoi University of Science and Technology</span></h3>
+                    </div>
+                    <div class="setting-list">
+                        <ul>
+                            <li><i class="fas fa-user-circle"></i><a href="#">View Profile</a></li>
+                            <li><i class="fas fa-edit"></i><a href="#">Edit Profile</a></li>
+                            <li><i class="fas fa-users-cog"></i><a href="#">Account Settings</a></li>
+                            <li><i class="fas fa-sign-out-alt"></i><a href="#">Sign Out</a></li>                        
+                        </ul>
+                    </div>     
                 </div>
             </nav>
         </div>
@@ -84,10 +103,10 @@
             <div class="searchUser">
                 <section class="users">
                     <div class="content">
-                        <img src="./resources/images/avt.png" alt="">
+                        <img src="./resources/images/avatar.png" alt="">
                         <div class="status-dot"><i class="fas fa-circle"></i></div>
                         <div class="details">
-                            <span>Harrison</span>
+                            <span>Hieu Vu Minh</span>
                             <p>Active now</p>
                         </div>
                     </div>
@@ -343,8 +362,8 @@
         </section>
     </footer>
     <div class="clearfix"></div>
+    <script type="text/javascript" src="./resources/js/chat.js"></script>
     <script type="text/javascript" src="./resources/js/reusable.js"></script>
-    <script type="text/javascript" src="./resources/js/account-settings.js"></script>
 </body>
 
 </html>
