--- a/PM-FE/signIn.html
+++ b/PM-FE/signIn.html
@@ -27,14 +27,13 @@
     <div class="form">
         <form action="/action_page.php" id="sign-in-form" method="POST">
             <h1>SIGN IN</h1>
+            
             <div class="input" id="email-phone">
-                <h5>Email or phone number</h5>
-                <input type="text" id="email-phone">
+                <input type="text" id="email-phone" placeholder="Email or phone number">
             </div>
 
             <div class="input" id="password-div">
-                <h5>Password</h5>
-                <input type="password">
+                <input type="password" placeholder="Password">
                 <i class="fas fa-eye"></i>
             </div>
 
